write related work section + table

--- a/content/2.sota.md
+++ b/content/2.sota.md
@@ -5,49 +5,85 @@
 <span class="comment" data-author="RT">If you have space for it, I also recommend adding a related work section. Maybe you can find some SPARQL parsing-related research papers. For example, Yasqui has a paper, which should probably be cited. SPARQL.js is also an important one, not sure if it has a paper. Comunica could be discussed briefly as well. And then there are the different SPARQL parsers in existence, which could be mentioned, such as Jena, Oxigraph, ... A detailed survey is not necessary though, we can keep this for the next paper. But a high-level overview may be good to have.</span>
 -->
 
-In this section we investigate the various SPARQL parser currently used.
-Comunica and YASGUI currently use [SPARQL.JS](https://www.npmjs.com/package/sparqljs) as parser.
-Sparql.JS is a parser created using the [Jison](https://www.npmjs.com/package/jison) parser builder.
-Jison uses a DSL heavily inspired on EBNF.
+In this section we investigate the related work,
+specifically looking at important software packages within the SPARQL ecosystem that parse SPARQL in some way. 
+[](#parsers-gird) summarizes our findings within a nice table.
+Interestingly, all major (open source) SPARQL parser implementation use either a parser builder or a parser builder toolkit.
+It should be noted that in the case of compiled languages, the parser can be constructed within the same compile step as the general project as is the case with Oxigraph.
+Only one implementation does not use a parser generator and that's Stardog Millan.
+Since Millan does not construct an AST, but only validates the query, it's hard to talk about modularity.
+With the public implementation supporting full modularity, meaning also allowing grammar rule deletions, would be hard.   
 
-<!-- Proof: https://github.com/apache/jena/blob/3b6fb69d4ef78f4f130235a8fccb853291ea2b47/jena-arq/src/main/java/org/apache/jena/sparql/lang/sparql_10/SPARQLParser10.java -->
-[Apache Jana](https://jena.apache.org/) uses [JavaCC](https://javacc.github.io/javacc/) to construct its parser.
-Again reacquiring a compile-step.
+<figure id="parsers-gird">
+<div>
 
+<table>
+    <thead><tr>
+        <th>Software Package</th><th>Parsing Software</th><th>Parser Generator</th>
+    </tr></thead>
+    <tbody><tr>
+        <td>[Comunica](cite:cites comunica)</td>
+        <td><a href="https://www.npmjs.com/package/sparqljs">SPARQL.JS</a>
+        <sup><a href="https://github.com/comunica/comunica/blob/94e1eacab069551590cc250074b36bce08720c4c/packages/actor-query-parse-sparql/package.json#L50">proof</a></sup>
+        </td>
+        <td><a href="https://www.npmjs.com/package/jison">Jison</a>
+        <sup><a href="https://github.com/RubenVerborgh/SPARQL.js/blob/13cc3d2ee4d2528b85d8b25cfbf886597dd100c1/lib/sparql.jison">proof</a></sup>
+        </td>
+    </tr><tr>
+        <td>[Yasgui](cite:cites yasgui)</td>
+        <td><a href="https://www.npmjs.com/package/sparqljs">SPARQL.JS</a></td>
+        <td><a href="https://www.npmjs.com/package/jison">Jison</a>
+        <sup><a href="https://github.com/RubenVerborgh/SPARQL.js/blob/13cc3d2ee4d2528b85d8b25cfbf886597dd100c1/lib/sparql.jison">proof</a></sup>
+        </td>
+    </tr><tr>
+        <td><a href="https://jena.apache.org/">Apache Jena</a></td>
+        <td></td>
+        <td><a href="https://javacc.github.io/javacc/">JavaCC</a>
+        <sup><a href="https://github.com/apache/jena/blob/3b6fb69d4ef78f4f130235a8fccb853291ea2b47/jena-arq/src/main/java/org/apache/jena/sparql/lang/sparql_10/SPARQLParser10.java">proof</a></sup>
+        </td>
+    </tr><tr>
+        <td><a href="https://github.com/oxigraph/oxigraph">Oxigraph</a></td>
+        <td></td>
+        <td><a href="https://github.com/kevinmehall/rust-peg">rust-peg</a>
+        <sup><a href="https://github.com/oxigraph/oxigraph/blob/2247319a1ff9132fd574d56db40f7178da938000/lib/spargebra/src/parser.rs#L778">proof</a></sup>
+        </td>
+    </tr><tr>
+        <td><a href="https://github.com/stardog-union/millan">Stardog - Millan</a></td>
+        <td></td>
+        <td>[Chevrotain](cite:cites chevrotain)
+        <sup><a href="https://github.com/stardog-union/millan/blob/fc0c04b1818d20c68cf7fceb41f6ba0ee8258bd5/src/sparql/BaseSparqlParser.ts">proof</a></sup>
+        </td>
+    </tr><tr>
+        <td><a href="https://virtuoso.openlinksw.com/">Virtuoso</a></td>
+        <td></td>
+        <td><a href="https://www.gnu.org/software/bison/">Bison</a>
+        <sup><a href="https://github.com/openlink/virtuoso-opensource/blob/23cff6731d6f8f431bde314453ec07038cc62bf5/README.GIT.md#package-dependencies">proof</a></sup>
+        </td>
+    </tr><tr>
+        <td><a href="https://github.com/blazegraph/database/">Blazegraph</a></td>
+        <td></td>
+        <td><a href="https://javacc.github.io/javacc/">JavaCC</a>
+        <sup><a href="https://github.com/blazegraph/database/blob/829ce8241ec29fddf7c893f431b57c8cf4221baf/sparql-grammar/src/main/java/com/bigdata/rdf/sail/sparql/ast/sparql.jj">proof</a></sup>
+        </td>
+    </tr><tr>
+        <td><a href="https://www.ontotext.com/products/graphdb/">GraphDB</a></td>
+        <td><a href="https://rdf4j.org/">RDF4J</a>
+        <sup><a href="https://github.com/eclipse-rdf4j/rdf4j/tree/b33d91485502d2f5266916c0581960e41b8f28b5/core/queryparser/sparql/JavaCC">proof</a></sup>
+        </td>
+        <td><a href="https://javacc.github.io/javacc/">JavaCC</a>
+        <sup><a href="https://github.com/eclipse-rdf4j/rdf4j/tree/b33d91485502d2f5266916c0581960e41b8f28b5/core/queryparser/sparql/JavaCC">proof</a></sup>
+        </td>
+    </tr>
+</tbody>
+</table>
 
-<!-- Proof: https://github.com/oxigraph/oxigraph/blob/2247319a1ff9132fd574d56db40f7178da938000/lib/spargebra/src/parser.rs#L778 -->
-[Oxigraph](https://github.com/oxigraph/oxigraph) uses [rust-peg](https://github.com/kevinmehall/rust-peg)
-again reacquiring a compile-step to get the compiler parser.
-Interestingly, since rust is a compiled language with a strong macro system,
-the EBNF based DSL can be included within the source file itself and the parser be constructed during the compilation of the larger project.
-The library does however not seem to support modular definitions.
-
-<!--
-Proof on Chevrotain: https://github.com/stardog-union/millan/blob/fc0c04b1818d20c68cf7fceb41f6ba0ee8258bd5/src/sparql/BaseSparqlParser.ts
--->
-Stardog uses their own [Stardog Millan](https://github.com/stardog-union/millan) which uses [Chevrotain](cite:cites chevrotain).
-They use the classic object-oriented definition using Chevrotain, and  I don't seem to find where they create the AST.
-The object-oriented approach has the explicit problem that you cannot easily change contracts since there is no loose coupling between types and implementation.
-This loose coupling sounds bad at first but provides the benefit that a parser can change a dependent rule without altering the original rule's implementation.
-This also prohibits a parser from being constructed based on an existing parser but removing grammar rules.
-These findings thereby limit the modularity of the parser. 
-
-
-<!--
-Proof: https://github.com/openlink/virtuoso-opensource/blob/23cff6731d6f8f431bde314453ec07038cc62bf5/README.GIT.md#package-dependencies
--->
-[Virtuoso](https://virtuoso.openlinksw.com/) likely uses the [Bison](https://www.gnu.org/software/bison/) parser generator since it is listed in the project dependencies.
-
-<!--
-proof: https://github.com/blazegraph/database/blob/829ce8241ec29fddf7c893f431b57c8cf4221baf/sparql-grammar/src/main/java/com/bigdata/rdf/sail/sparql/ast/sparql.jj
--->
-[Blazegraph](https://github.com/blazegraph/database/) also uses [JavaCC].
-
-<!--
-Proof on graphDB using RDF4J:
-RDF4J uses JavaCC: https://github.com/eclipse-rdf4j/rdf4j/tree/b33d91485502d2f5266916c0581960e41b8f28b5/core/queryparser/sparql/JavaCC
--->
-[Ontotext GraphDB](https://www.ontotext.com/products/graphdb/) uses YASGUI as a UI, and their engine uses RDF4J.
-RDF4J again uses JavaCC
+</div>
+<figcaption markdown="block">
+Each row represents a popular software package linking it to their used parsing software and in turn linking that to the used parser generator.
+When the parsing software is omitted, it means that the software implements the parser itself.  
+We found that all major parser used are constructed through some parser generator.
+For each claim, we link to proof.
+</figcaption>
+</figure>
 
 
