LLM check sota & proof yasgui swipl use

--- a/content/2.sota.md
+++ b/content/2.sota.md
@@ -1,18 +1,20 @@
 ## Related work
 {:#related-work}
 
-<!--
-<span class="comment" data-author="RT">If you have space for it, I also recommend adding a related work section. Maybe you can find some SPARQL parsing-related research papers. For example, Yasqui has a paper, which should probably be cited. SPARQL.js is also an important one, not sure if it has a paper. Comunica could be discussed briefly as well. And then there are the different SPARQL parsers in existence, which could be mentioned, such as Jena, Oxigraph, ... A detailed survey is not necessary though, we can keep this for the next paper. But a high-level overview may be good to have.</span>
--->
+In this section, we examine prominent software packages in the SPARQL ecosystem that implement parsing capabilities.
+Our findings are summarized in [](#parsers-gird).
 
-In this section we investigate the related work,
-specifically looking at important software packages within the SPARQL ecosystem that parse SPARQL in some way. 
-[](#parsers-gird) summarizes our findings within a nice table.
-Interestingly, all major (open source) SPARQL parser implementation use either a parser builder or a parser builder toolkit.
-It should be noted that in the case of compiled languages, the parser can be constructed within the same compile step as the general project as is the case with Oxigraph.
-Only one implementation does not use a parser generator and that's Stardog Millan.
-Since Millan does not construct an AST, but only validates the query, it's hard to talk about modularity.
-With the public implementation supporting full modularity, meaning also allowing grammar rule deletions, would be hard.   
+Notably, all discussed major open-source SPARQL parsers rely on either parser generators or parser-building toolkits to define their grammars.
+In compiled languages such as Rust or Java,
+the parser generation step can be integrated directly into the main build step—e.g.,
+Oxigraph uses rust-peg for this purpose.
+Interestingly, in our survey only Stardog's Millan does not use a parser builder.
+Instead, it uses Chevrotain without constructing an Abstract Syntax Tree (AST);
+it appears to focus solely on validation rather than full syntactic analysis.
+
+This highlights a broader pattern: while parser generators dominate SPARQL tooling, few systems are designed with modularity or extensibility as a first-class concern.
+In particular, full modularity—including the ability to remove grammar rules—is not supported in current public implementations,
+making adaptation or evolution of these parsers difficult.
 
 <figure id="parsers-gird">
 <div>
@@ -22,7 +24,7 @@ With the public implementation supporting full modularity, meaning also allowing
         <th>Software Package</th><th>Parsing Software</th><th>Parser Generator</th>
     </tr></thead>
     <tbody><tr>
-        <td>[Comunica](cite:cites comunica)</td>
+        <td><a href="https://comunica.dev/">Comunica</a></td>
         <td><a href="https://www.npmjs.com/package/sparqljs">SPARQL.JS</a>
         <sup><a href="https://github.com/comunica/comunica/blob/94e1eacab069551590cc250074b36bce08720c4c/packages/actor-query-parse-sparql/package.json#L50">proof</a></sup>
         </td>
@@ -30,10 +32,10 @@ With the public implementation supporting full modularity, meaning also allowing
         <sup><a href="https://github.com/RubenVerborgh/SPARQL.js/blob/13cc3d2ee4d2528b85d8b25cfbf886597dd100c1/lib/sparql.jison">proof</a></sup>
         </td>
     </tr><tr>
-        <td>[Yasgui](cite:cites yasgui)</td>
-        <td><a href="https://www.npmjs.com/package/sparqljs">SPARQL.JS</a></td>
-        <td><a href="https://www.npmjs.com/package/jison">Jison</a>
-        <sup><a href="https://github.com/RubenVerborgh/SPARQL.js/blob/13cc3d2ee4d2528b85d8b25cfbf886597dd100c1/lib/sparql.jison">proof</a></sup>
+        <td><a href="https://yasgui.triply.cc/">Yasgui</a></td>
+        <td></td>
+        <td><a href="https://www.swi-prolog.org/">SWI Prolog</a>
+        <sup><a href="https://github.com/TriplyDB/Yasgui/blob/4086f8ba5281e2781488dd83e1e2cc4af775cdc2/packages/yasqe/grammar/build.sh">proof</a></sup>
         </td>
     </tr><tr>
         <td><a href="https://jena.apache.org/">Apache Jena</a></td>
@@ -50,7 +52,7 @@ With the public implementation supporting full modularity, meaning also allowing
     </tr><tr>
         <td><a href="https://github.com/stardog-union/millan">Stardog - Millan</a></td>
         <td></td>
-        <td>[Chevrotain](cite:cites chevrotain)
+        <td><a href="https://chevrotain.io/docs/">Chevrotain</a>
         <sup><a href="https://github.com/stardog-union/millan/blob/fc0c04b1818d20c68cf7fceb41f6ba0ee8258bd5/src/sparql/BaseSparqlParser.ts">proof</a></sup>
         </td>
     </tr><tr>
@@ -78,11 +80,10 @@ With the public implementation supporting full modularity, meaning also allowing
 </table>
 
 </div>
-<figcaption markdown="block">
-Each row represents a popular software package linking it to their used parsing software and in turn linking that to the used parser generator.
-When the parsing software is omitted, it means that the software implements the parser itself.  
-We found that all major parser used are constructed through some parser generator.
-For each claim, we link to proof.
+<figcaption markdown="1">
+Each row lists a widely used software package, its associated parsing library, and the parser generator employed.
+When the parsing software is omitted, the parser is implemented directly within the project.
+For each usage claim, we provide a link to back up the claim.
 </figcaption>
 </figure>
 
