rprocess eview RT 2

--- a/content/5.conclusion.md
+++ b/content/5.conclusion.md
@@ -1,7 +1,8 @@
 ## Conclusion
 {:#conclusion}
 
-In this paper, we presented a modular, builder-based architecture for constructing extensible SPARQL parsers.
+In this paper, we presented the need for a modular parser, and offered an initial prototype to cover this need.
+Our prototype uses a builder-based architecture for constructing extensible SPARQL parsers.
 By embracing runtime modularity, declarative rule definitions, and strong typing,
 our approach enables a new class of SPARQL tools that can evolve alongside a rapidly diversifying query ecosystem.
 Through our demonstration, we showed that parser modification can be performed with minimal overhead and high confidence in correctness.
