--- a/content/1.introduction.md
+++ b/content/1.introduction.md
@@ -1,7 +1,7 @@
 ## Introduction
 {:#introduction}
 
-The [SPARQL query language](cite:cites spec:sparql), a cornerstone of the Semantic Web stack,
+The [SPARQL query language](cite:cites spec:sparqllang), a cornerstone of the Semantic Web stack,
 has evolved through both standardisation and real-world innovation.
 While SPARQL 1.1 defines a clear and extensible foundation,
 the ecosystem has gradually diverged as implementers introduced powerful but engine-specific extensions.
