--- a/content/4.demo.md
+++ b/content/4.demo.md
@@ -17,7 +17,7 @@ These modifications will demonstrate how the modular parser architecture—built
 The focus will be on how individual grammar components can be extended or replaced without touching unrelated parts of the parser.
 We will also highlight how the use of strong typing improves the developer experience by surfacing integration errors at compile time.
 
-For each of the extensions we alter the grammar rules in accordance to the [SPARQL 1.1 specification](cite:cites spec:sparql) (shown between brackets):
+For each of the extensions we alter the grammar rules in accordance to the [SPARQL 1.1 specification](cite:cites spec:sparqllang) (shown between brackets):
 
 1. **ADJUST function**: We add an '`ADJUST`' token to the lexer and add a grammar rule for it, then patch the [BuiltInCall [121]](https://www.w3.org/TR/sparql11-query/#rBuiltInCall) rule. 
 2. **CONSTRUCT QUAD queries**: Following [Jena’s approach](https://jena.apache.org/documentation/query/construct-quad.html#grammar),
