tackle review comments

--- a/content/2.sota.md
+++ b/content/2.sota.md
@@ -8,7 +8,7 @@ Notably, all discussed major open-source SPARQL parsers rely on either parser ge
 In compiled languages such as Rust or Java,
 the parser generation step can be integrated directly into the main build step—e.g.,
 Oxigraph uses rust-peg for this purpose.
-Interestingly, in our survey only Stardog's Millan does not use a parser builder.
+Interestingly, in our survey only [Stardog's Millan](https://github.com/stardog-union/millan) does not use a parser builder.
 Instead, it uses Chevrotain without constructing an Abstract Syntax Tree (AST);
 it appears to focus solely on validation rather than full syntactic analysis.
 
