--- a/content/1.introduction.md
+++ b/content/1.introduction.md
@@ -28,7 +28,7 @@ Unlike traditional parser generators such as [ANTLR](cite:cites parr1995antlr) o
 which rely on Domain Specific Languages (DSLs) and generate static parsing code — our parser should be defined entirely within a host programming language.
 This would eliminate the compile step, enable programmatic extension, and leverage strong typing to provide a safer,
 more developer-friendly API.
-The parser should not be a handwritten parser either, instead it should use declarative rules such as present in the Typescript based [Chevrotain parser toolkit](cite:cites chevrotain).
+The parser should not be a handwritten parser either, instead it should use declarative rules such as present in the Typescript-based [Chevrotain parser toolkit](cite:cites chevrotain).
 
 A modular parser, that allows you to add, override, or swap grammar fragments at runtime,
 would empower both researchers and practitioners to create a new generation of language-aware SPARQL tools.
