--- a/content/3.architecture.md
+++ b/content/3.architecture.md
@@ -32,7 +32,8 @@ enabling accurate diagnostics with row and column offsets.
 
 Inspired by the [Comunica modular query engine](cite:cites comunica) codebase,
 the codebase of a modular parser should not be a big monolith but instead use many smaller packages that can be tied together to serve a larger purpose.
-To facilitate the maintainability of many small packages a [monorepo](https://monorepo.tools/) structure could be considered.
+To facilitate the maintainability of many small packages a
+<a href="https://monorepo.tools/" class="mandatory">monorepo</a> structure could be considered.
 Within the Comunica codebase, the usage of small packages allows it to define many different builds (eg. a minimal built for the web, and a general built with and without file system access).
 Similar benefits can be expected in the adoption of such a structure within the modular parser:
 
