add Gen-AI decl

--- a/content/2.sota.md
+++ b/content/2.sota.md
@@ -1,4 +1,4 @@
-## Related work
+## Related Work
 {:#related-work}
 
 In this section, we examine prominent software packages in the SPARQL ecosystem that implement parsing capabilities.
