--- a/content/5.conclusion.md
+++ b/content/5.conclusion.md
@@ -23,3 +23,11 @@ We hope this work provides a foundation for building SPARQL tools that are not o
 
 **Acknowledgements.** Jitse De Smet is a predoctoral fellow of the Research Foundation – Flanders (FWO) (1SB8525N).
 Ruben Taelman is a postdoctoral fellow of the Research Foundation – Flanders (FWO) (1202124N).
+
+
+## Declaration on Generative AI
+
+During the preparation of this work, the author(s) used Chat-GPT-4 in order to:
+Paraphrase and reword, improve writing style, perform grammar and spelling checks, and drafting the abstract.
+After using these tool(s)/service(s), the author(s) reviewed and
+edited the content as needed and take(s)full responsibility for the publication’s content.
